--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='5000' height='5000' preserveAspectRatio='none' viewBox='0 0 5000 5000'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1077%26quot%3b)' fill='none'%3e%3crect width='5000' height='5000' x='0' y='0' fill='rgba(50%2c 54%2c 66%2c 1)'%3e%3c/rect%3e%3cpath d='M0%2c2324.291C425.206%2c2279.793%2c732.034%2c1922.395%2c1056.649%2c1644.177C1340.453%2c1400.937%2c1554.699%2c1114.072%2c1769.198%2c807.966C2032.612%2c432.054%2c2520.442%2c101.351%2c2456.246%2c-353.155C2392.081%2c-807.444%2c1841.862%2c-1002.767%2c1474.604%2c-1277.752C1180.471%2c-1497.984%2c863.003%2c-1646.878%2c527.694%2c-1797.16C136.279%2c-1972.589%2c-234.141%2c-2312.648%2c-655.506%2c-2232.447C-1079.617%2c-2151.723%2c-1367.016%2c-1751.045%2c-1605.464%2c-1391.143C-1823.969%2c-1061.342%2c-1892.805%2c-671.83%2c-1948.93%2c-280.214C-2005.031%2c111.233%2c-2059.307%2c507.832%2c-1931.237%2c881.966C-1795.381%2c1278.845%2c-1545.126%2c1630.271%2c-1209.027%2c1881.283C-858.028%2c2143.423%2c-435.705%2c2369.888%2c0%2c2324.291' fill='%232d303b'%3e%3c/path%3e%3cpath d='M5000 7164.089C5399.266 7186.584 5743.348 6888.639 6045.127 6626.249 6316.892 6389.956 6448.157999999999 6054.997 6631.845 5745.239 6840.455 5393.452 7264.081 5087.564 7196.796 4684.148 7129.277 4279.3279999999995 6570.99 4181.175 6317.186 3858.652 6044.136 3511.672 6062.183 2928.769 5664.489 2736.959 5270.15 2546.767 4771.532 2711.543 4392.267 2930.253 4047.497 3129.071 3979.078 3590.125 3697.419 3871.307 3382.529 4185.664 2717.515 4222.314 2656.521 4663.059 2595.413 5104.627 3177.2960000000003 5353.067 3442.8050000000003 5711.147 3643.8869999999997 5982.3369999999995 3781.071 6282.278 4027.9139999999998 6512.595 4319.013 6784.205 4602.496 7141.693 5000 7164.089' fill='%23383c49'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1077'%3e%3crect width='5000' height='5000' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
